# cave-home

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  rust-toolchain.toml  tracker.yaml
crates/cave-home-air-quality/: Cargo.toml  parity.manifest.toml
crates/cave-home-air-quality/src/: aqi.rs  assessment.rs  category.rs  classify.rs  lib.rs  nowcast.rs  reading.rs
crates/cave-home-air-quality/tests/: nowcast.rs
crates/cave-home-alarm/: Cargo.toml  parity.manifest.toml
crates/cave-home-alarm/src/: code.rs  config.rs  label.rs  lib.rs  machine.rs  state.rs
crates/cave-home-apiserver-rs/: Cargo.toml  parity.manifest.toml
crates/cave-home-apiserver-rs/src/: admission.rs  audit.rs  authn.rs  client_trait.rs  discovery.rs  gvk.rs  handler.rs  http.rs  json.rs  lib.rs  meta.rs  metrics.rs  patch.rs  path.rs  rbac.rs  registry.rs  selector.rs  serialization.rs  server.rs  status.rs  storage.rs  tls.rs  types.rs  webhook.rs  x509.rs
crates/cave-home-audio-mass/: Cargo.toml  parity.manifest.toml
crates/cave-home-audio-mass/src/: label.rs  lib.rs  library.rs  media.rs  player.rs  queue.rs  shuffle.rs
crates/cave-home-audio-mopidy/: Cargo.toml  parity.manifest.toml
crates/cave-home-audio-mopidy/src/: command.rs  label.rs  lib.rs  playback.rs  response.rs  status.rs  tracklist.rs
crates/cave-home-audio-snapcast/: Cargo.toml  parity.manifest.toml
crates/cave-home-audio-snapcast/src/: client.rs  control.rs  group.rs  json.rs  label.rs  lib.rs  rpc.rs  sync.rs  topology.rs
crates/cave-home-automation/: Cargo.toml  parity.manifest.toml
crates/cave-home-automation/src/: config_entry.rs  context.rs  error.rs  event_bus.rs  lib.rs  scene.rs  script.rs  service.rs  state.rs  template.rs
crates/cave-home-binary/: Cargo.toml  parity.manifest.toml
crates/cave-home-binary/src/: apirest.rs  bootstrap.rs  cli.rs  config.rs  health.rs  http.rs  lib.rs  lifecycle.rs  main.rs  node.rs  server.rs  shutdown.rs  supervisor.rs  table.rs  tls.rs  version.rs
crates/cave-home-binary/tests/: tls_serving.rs  write_path_e2e.rs
crates/cave-home-calendar/: Cargo.toml  parity.manifest.toml
crates/cave-home-calendar/src/: agenda.rs  date.rs  event.rs  label.rs  lib.rs  rrule.rs
crates/cave-home-camera/: Cargo.toml  parity.manifest.toml
crates/cave-home-camera/src/: birdseye.rs  config.rs  detection.rs  error.rs  events.rs  geometry.rs  label.rs  lib.rs  motion.rs  policy.rs  prelude.rs  track.rs  tracker.rs  zone.rs
crates/cave-home-cli/: Cargo.toml  parity.manifest.toml
crates/cave-home-cli/src/: apiserver.rs  cni.rs  containers.rs  controller_manager.rs  kubelet.rs  lib.rs  main.rs  proxy.rs  scheduler.rs  secrets_encryption.rs  servicelb.rs  storage.rs  top.rs
crates/cave-home-cli/tests/: cli.rs  orchestration_storage.rs  servicelb.rs  top.rs
crates/cave-home-cluster/: Cargo.toml  parity.manifest.toml
crates/cave-home-cluster/src/: failover.rs  health.rs  label.rs  lib.rs  node.rs  placement.rs  quorum.rs  topology.rs  update.rs
crates/cave-home-cni-flannel/: Cargo.toml  HANDOFF-real-network.md  parity.manifest.toml
crates/cave-home-cni-flannel/src/: backend.rs  cidr.rs  cni.rs  cni_delegate.rs  config.rs  datapath.rs  device.rs  dualstack.rs  hostgw.rs  ipam.rs  lib.rs  mac.rs  neigh.rs  netlink.rs  netlink_socket.rs  route_network.rs  routes.rs  subnet.rs  subnet_env.rs  subnet_registry.rs  vxlan_network.rs
crates/cave-home-cni-flannel/tests/: cni_handler_test.rs  cni_subnet_env_test.rs  etcd_registry_test.rs  mem_registry_test.rs  subnet_manager_test.rs  two_node_network.rs  vxlan_device_test.rs
crates/cave-home-containerd-rs/: Cargo.toml  build.rs  parity.manifest.toml
crates/cave-home-containerd-rs/src/: digest.rs  lib.rs  lifecycle.rs  reference.rs  server.rs  snapshot.rs
crates/cave-home-containerd-rs/tests/: content_store_test.rs  cri_container_test.rs  cri_sandbox_test.rs  image_pull_test.rs  snapshots_overlay_test.rs
crates/cave-home-controller-manager-rs/: Cargo.toml  parity.manifest.toml
crates/cave-home-controller-manager-rs/src/: api_client.rs  informer.rs  leaderelection.rs  lib.rs  manager.rs  reconcile.rs  schedule.rs  types.rs  workqueue.rs
crates/cave-home-controller-manager-rs/tests/: apiserver.rs  cron_schedule.rs  cronjob_controller.rs  daemonset_controller.rs  deployment_controller.rs  e2e_deployment.rs  endpoints_controller.rs  job_controller.rs  leader_election.rs  namespace_controller.rs  replicaset_controller.rs  replicaset_reconcile.rs  serviceaccount_controller.rs  statefulset_controller.rs
crates/cave-home-core/: Cargo.toml  HANDOFF-ha-core-foundation.md  parity.manifest.toml
crates/cave-home-core/src/: area_registry.rs  automation.rs  config.rs  context.rs  core_context.rs  device_registry.rs  entity.rs  entity_registry.rs  event.rs  event_bus.rs  lib.rs  loader.rs  service.rs  state.rs  state_machine.rs  template.rs  util.rs
crates/cave-home-coredns-rs/: Cargo.toml  README.md  parity.manifest.toml
crates/cave-home-coredns-rs/src/: arpa.rs  build.rs  builtins.rs  cache.rs  corefile.rs  error.rs  file.rs  forward.rs  hosts.rs  k8s.rs  kubernetes.rs  lib.rs  message.rs  name.rs  plugin.rs  rewrite.rs  rr.rs  server.rs  wire.rs
crates/cave-home-coredns-rs/tests/: dns_server.rs
crates/cave-home-cover/: Cargo.toml  parity.manifest.toml
crates/cave-home-cover/src/: lib.rs  (+5 more)
crates/cave-home-display/: Cargo.toml  parity.manifest.toml
crates/cave-home-dns-adguard/: Cargo.toml  parity.manifest.toml
crates/cave-home-dns-unbound/: Cargo.toml  parity.manifest.toml
crates/cave-home-doorbell/: Cargo.toml  parity.manifest.toml
crates/cave-home-esphome/: Cargo.toml  parity.manifest.toml
crates/cave-home-free-home/: Cargo.toml  parity.manifest.toml
crates/cave-home-freeathome/: Cargo.toml  README.md  parity.manifest.toml
crates/cave-home-garden/: Cargo.toml  parity.manifest.toml
crates/cave-home-helm-controller-rs/: Cargo.toml  parity.manifest.toml
crates/cave-home-history/: Cargo.toml  parity.manifest.toml
crates/cave-home-household/: Cargo.toml  parity.manifest.toml
(+1367 files in other folders)
