[package]
name              = "cave-home-apiserver-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-apiserver-rs — Kubernetes API server; upstream: kubernetes/kubernetes (K3s-vendored); port method: line-by-line (Orchestration Phase 2, ADR-004)"

[package.metadata.cave-home]
upstream    = "kubernetes/kubernetes (K3s-vendored)"
port-method = "line-by-line"
phase       = "orchestration-phase-2"

[package.metadata.upstream]
repo    = "kubernetes/kubernetes"
release = "v1.36.1"
sha     = "756939600b9a7180fc2df6550a4585b638875e67"
subpath = "staging/src/k8s.io/apiserver + pkg/registry"

[dependencies]
async-trait      = "0.1"
axum             = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "matched-path", "original-uri"] }
bytes            = "1"
futures          = "0.3"
http             = "1"
jsonwebtoken     = { version = "9", default-features = false }
parking_lot      = "0.12"
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
serde_yaml       = "0.9"
sha2             = "0.10"
thiserror        = "2"
tokio            = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net"] }
tower            = { version = "0.5", default-features = false }
uuid             = { version = "1", features = ["v4"] }
x509-parser      = { version = "0.16", default-features = false }

[dev-dependencies]
tokio      = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "net", "test-util"] }

[lints]
workspace = true
