[package]
name              = "cave-home-apiserver-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-apiserver-rs — Kubernetes API-server decision core (GVK/GVR, REST verb semantics, optimistic concurrency, selectors, patch, admission pipeline); std-only behavioural reimplementation of the documented k8s REST contract (Orchestration, ADR-004)"

[package.metadata.cave-home]
spec-sources = "public Kubernetes API conventions + label/field selector docs + RFC 7396/6902 + admission-controller phase contract (see parity.manifest.toml)"
port-method  = "behavioral-reimplementation"
phase        = "orchestration-phase-1"

[dependencies]
# Storage backend seam: the apiserver persists objects through kine's
# etcd-compatible MVCC KV store (the same datastore k3s embeds). Intra-workspace
# dependency only — no external crates are introduced.
cave-home-kine-rs = { path = "../cave-home-kine-rs" }

[dev-dependencies]

[lints]
workspace = true
