[package]
name              = "cave-home-audio-mopidy"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-audio-mopidy — local music server (MPD protocol engine + HA mopidy integration); upstream: mopidy/mopidy (Apache-2.0); port method: spec-based (MPD protocol engine, clean-room) + line-by-line (Mopidy adapters, phase-1b) (ADR-020)"

[package.metadata.cave-home]
upstream    = "mopidy/mopidy + home-assistant/core (mopidy integration)"
port-method = "spec-based (MPD protocol engine; clean-room per Charter §6.1) + line-by-line (Mopidy adapters, phase-1b)"
adr         = "ADR-020"

[lints]
workspace = true
