[package]
name              = "cave-home-binary"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home — unified Rust binary entry point linking every cave-home-* crate per Charter §5 (first-party, no upstream port)"

[package.metadata.cave-home]
upstream    = "none"
port-method = "first-party"

[lib]
name = "cave_home_binary"
path = "src/lib.rs"

[[bin]]
name = "cave-home"
path = "src/main.rs"

[dependencies]
# The async runtime hosting every in-process subsystem (Charter §5: one process).
tokio = { version = "1", features = [
    "rt-multi-thread",
    "net",
    "io-util",
    "sync",
    "macros",
    "time",
    "signal",
] }

# The K3s-class control plane, all linked in-process. The orchestration crate is
# the bring-up/shutdown brain; the rest are the decision cores this binary drives.
cave-home-orchestration       = { path = "../cave-home-orchestration" }
cave-home-apiserver-rs        = { path = "../cave-home-apiserver-rs" }
cave-home-kine-rs             = { path = "../cave-home-kine-rs" }
cave-home-scheduler-rs        = { path = "../cave-home-scheduler-rs" }
cave-home-controller-manager-rs = { path = "../cave-home-controller-manager-rs" }
cave-home-kubelet-rs          = { path = "../cave-home-kubelet-rs" }
cave-home-cni-flannel         = { path = "../cave-home-cni-flannel" }
cave-home-traefik-rs          = { path = "../cave-home-traefik-rs" }
cave-home-klipper-lb-rs       = { path = "../cave-home-klipper-lb-rs" }

# The household-facing Portal view-model, mounted alongside the control plane.
cave-home-portal              = { path = "../cave-home-portal" }

# TLS for the apiserver listener (off by default; the plain-HTTP path is the
# baseline). `ring` is the offline crypto provider — matching cave-home-unifi —
# so no aws-lc-sys C/network build is pulled in.
tokio-rustls   = { version = "0.26", default-features = false, features = ["ring", "tls12"], optional = true }
rustls         = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"], optional = true }
rustls-pemfile = { version = "2", optional = true }

[features]
# Serve the apiserver over HTTPS (and, with a client CA configured, mTLS).
tls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-pemfile"]

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "test-util"] }
# Self-signed certs generated in-test so the TLS serving path is exercised for
# real without checked-in key material.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }

[lints]
workspace = true
