[package]
name              = "cave-home-calendar"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-calendar — household calendar engine: iCalendar (RFC 5545) parsing + recurrence (RRULE) expansion + agenda queries, in plain EN/DE/TR. Clean-room from public RFCs; Radicale source NOT read (ADR-027, Charter §6.1)."

[package.metadata.cave-home]
upstream    = "Radicale (reference only, source NOT read) + home-assistant/core (caldav client, deferred)"
port-method = "clean-room"
spec-source = "RFC 5545 (iCalendar) + RFC 4791 (CalDAV)"
adr         = "ADR-027"

[lints]
workspace = true
