[package]
name              = "cave-home-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-camera — NVR + object-detection reimpl (upstream: blakeblackshear/frigate, port method: line-by-line)"

[package.metadata.cave-home]
upstream    = "blakeblackshear/frigate"
port-method = "line-by-line"
phase       = "camera-phase-1"

[package.metadata.upstream]
repo    = "blakeblackshear/frigate"
release = "v0.17.1"
sha     = "416a9b7692e052be98ad503704d26c7ef7a4c88d"
subpath = "frigate"

[features]
# Frigate's ORT (onnxruntime) bindings download a native runtime on first
# build. The Phase 1 trait + tracker code is provider-agnostic; the
# `cpu-yolo` feature pulls in the optional `ort` dependency for the real
# CPU YOLO inference path. The trait impl itself is always compiled; with
# the feature off, `CpuYoloDetector::load_model` returns
# `DetectorError::Unavailable` with a clear cause.
default      = []
cpu-yolo     = []
coral-tpu    = []
nvidia-trt   = []

[dependencies]
async-trait  = "0.1"
bytes        = "1"
futures      = "0.3"
image        = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
imageproc    = { version = "0.25", default-features = false }
parking_lot  = "0.12"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
thiserror    = "2"
tokio        = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "time", "process", "io-util"] }
tracing      = "0.1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt-multi-thread", "sync", "macros", "fs", "time", "test-util", "process", "io-util"] }

[lints]
workspace = true
