[package]
name              = "cave-home-camera"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-camera — Frigate-class detection-zone, object-tracking and clip-policy engine (Phase-1 pure-logic core; RTSP/inference/recording deferred)"

[package.metadata.cave-home]
upstream    = "blakeblackshear/frigate"
port-method = "spec-based (detection-policy core)"
phase       = "camera-phase-1"

# Phase 1 ships the std-only decision core (zones, point-in-polygon, IoU
# tracking, detection filtering, clip/snapshot policy, retention, EN/DE/TR UX).
# The RTSP/ONVIF ingest, the object-detection inference (ML model + GPU /
# accelerator), hardware decode, recording storage / clip extraction and the
# UniFi-Protect-class vendor adapters are ML/video/IO/network-bound and are
# deferred to Phase 1b — see parity.manifest.toml [[unmapped]]. The core
# therefore depends on no external crates.

[dependencies]

[dev-dependencies]

[lints]
workspace = true
