[package]
name              = "cave-home-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-cli — cavehomectl command surface (first-party, no upstream port)"

[package.metadata.cave-home]
upstream    = "none"
port-method = "first-party"

[lib]
path = "src/lib.rs"

[[bin]]
name = "cavehomectl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
cave-home-tesla = { path = "../cave-home-tesla" }
# Pure model/colour/scene types only — the CLI does not link the async
# transport, so `runtime` is off (keeps reqwest out of the cavehomectl build).
cave-home-hue = { path = "../cave-home-hue", default-features = false }
cave-home-unifi = { path = "../cave-home-unifi" }
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"

[lints]
workspace = true
