[package]
name              = "cave-home-cni-flannel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-cni-flannel — flannel CNI subnet-management + IPAM decision core (CIDR math, per-node subnet leasing, pod IPAM, backend config, route computation, CNI ADD/DEL result); std-only; upstream behaviour: flannel-io/flannel Apache-2.0; port method: behavioral reimplementation from public flannel/CNI docs (Orchestration Phase 1, ADR-004 + ADR-008)"

[package.metadata.cave-home]
upstream    = "flannel-io/flannel"
port-method = "behavioral-reimplementation"
phase       = "orchestration-phase-1"
adr         = "ADR-008"

# std-only by design: the decision core (CIDR math, subnet leasing, IPAM,
# backend config, route computation, CNI result model) needs no external
# crates. The netlink datapath, durable lease store and daemon watch loop —
# which would pull in async / netlink / etcd deps — are deferred to Phase 1b
# (see parity.manifest.toml).
[dependencies]

[lints]
workspace = true
