[package]
name              = "cave-home-containerd-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-containerd-rs — CRI/OCI container-runtime decision core (Orchestration Phase 1, ADR-004). Behavioural reimplementation of documented containerd/CRI/OCI behaviour."

[package.metadata.cave-home]
upstream    = "containerd/containerd (behavioural reference target per ADR-004)"
port-method = "behavioural reimplementation (spec/contract-based; not verbatim line-by-line)"
phase       = "orchestration-phase-1"

[lints]
workspace = true

# Decision core: std-only. The runc/shim exec, the gRPC CRI server, the
# registry pull/distribution client, the snapshotter/overlayfs layer and the
# cgroup/namespace syscalls are all ADR-004 phase-1b and deferred — see
# parity.manifest.toml — so this crate intentionally pulls in no async runtime,
# no gRPC stack and no network client.
[dependencies]

[dev-dependencies]
