[package]
name              = "cave-home-controller-manager-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-controller-manager-rs — K3s controller-manager (workqueue + reconcile + informer cache + in-memory apiserver + 12 reconcilers incl. ReplicaSet/Deployment/StatefulSet/DaemonSet/Job/CronJob/Namespace/ServiceAccount/Endpoints + manager run loop + lease-based leader election); behavioural reimplementation of documented kube-controller-manager contracts (Orchestration Phase 2, ADR-004); std-only, networked transport deferred"

[package.metadata.cave-home]
upstream    = "kubernetes/kubernetes (K3s-vendored)"
port-method = "behavioural-reimplementation"
phase       = "orchestration-phase-2"

[package.metadata.upstream]
repo    = "kubernetes/kubernetes"
release = "v1.36.1"
subpath = "pkg/controller (behavioural reference, not verbatim)"

# std-only: no async runtime, no clock crate (caller supplies `now`),
# no third-party deps. The decision core is pure and panic-free.

[lints]
workspace = true
