[package]
name              = "cave-home-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-core — state machine + event bus (upstream: home-assistant/core; port method: behavioural reimplementation of HA-core semantics)"

[package.metadata.cave-home]
upstream    = "home-assistant/core"
# Behavioural reference (homeassistant/core.py semantics); not a verbatim
# line-by-line transcription. See parity.manifest.toml for spec sources.
port-method = "behavioural-reimplementation"

[dependencies]
parking_lot = "0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
time        = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing     = "0.1"
uuid        = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "test-util"] }

[lints]
workspace = true
