[package]
name              = "cave-home-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace   = true
description = "cave-home-core — state machine + event bus (upstream: home-assistant/core; port method: behavioural reimplementation of HA-core semantics)"

[package.metadata.cave-home]
upstream    = "home-assistant/core"
# Behavioural reference (homeassistant/core.py semantics); not a verbatim
# line-by-line transcription. See parity.manifest.toml for spec sources.
port-method = "behavioural-reimplementation"

[dependencies]
parking_lot = "0.12"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
time        = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"] }
tokio       = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time"] }
tracing     = "0.1"
uuid        = { version = "1", features = ["v4", "serde"] }
# Template engine — minijinja is a Jinja2 implementation, the same template
# language HA's `homeassistant/helpers/template.py` builds on (HA uses Python
# Jinja2). This is the faithful port substrate, not a Tera approximation.
minijinja   = "2"
# Config layer — HA configuration is YAML (`homeassistant/config.py`).
serde_yaml  = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "time", "test-util"] }

[lints]
workspace = true
